--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dependencies": {
         "@inertiajs/vue3": "^2.0.11",
         "@vitejs/plugin-vue": "^5.2.4",
-        "vue": "^3.5.16"
+        "chart.js": "^4.4.9",
+        "vue": "^3.5.16",
+        "vue-chartjs": "^5.3.2"
     }
 }
