--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@inertiajs/vue3": "^2.0.11",
         "@vitejs/plugin-vue": "^5.2.4",
         "chart.js": "^4.4.9",
+        "pinia": "^3.0.3",
         "vue": "^3.5.16",
         "vue-chartjs": "^5.3.2"
     }
