--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "chart.js": "^4.4.9",
         "pinia": "^3.0.3",
         "vue": "^3.5.16",
-        "vue-chartjs": "^5.3.2"
+        "vue-chartjs": "^5.3.2",
+        "vue-toastification": "^2.0.0-rc.5"
     }
 }
